testing mobile spacing fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,6 +58,12 @@ body {
 	margin: 0;
 	color: var(--t-fg);
 	font-family: 'Inter', 'system-ui', sans-serif;
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 * {
